# rag-anything

./: .env.sample  .gitignore  .gitlab-ci.yml  README.md  docker-compose.dev.yml  docker-compose.server.yml  pyproject.toml  rag-anything.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
infrastructure/: Dockerfile.lambda  Dockerfile.server  create-dynamo-db.ps1  create-s3.ps1  template.yaml
src/: auth.py  chunker.py  config.py  embedder.py  evaluation.py  ingestor.py  observability.py  prompt_builder.py  rag_pipeline.py  retriever.py  sparse_embedder.py  vector_store.py
src/api/: deps.py  main.py  models.py
src/api/loaders/: docx_loader.py  file_loader.py  pdf_loader.py
src/api/routes/: documents.py  evaluate.py  local_upload.py  query.py
src/llm/: base.py  bedrock.py  factory.py  openai.py  openrouter.py
src/storage/: dynamo.py  factory.py  local_dynamo.py  local_s3.py  s3.py
tests/: test_api.py  test_auth.py  test_bedrock_hello.py  test_docx_loader.py  test_health.py  test_llm.py  test_openrouter_hello.py  test_openrouter_llm.py  test_pdf_loader.py  test_retriever.py  test_smoke_tests.py
