[project]
name = "rag-anything"
version = "0.1.0"
description = ""
authors = [
    {name = "vasantbala",email = "30379760+vasantbala@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "mangum (>=0.21.0,<0.22.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cachetools (>=7.0.5,<8.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "fastembed (>=0.7.4,<0.8.0)",
    "qdrant-client (>=1.17.1,<2.0.0)",
    "boto3 (>=1.42.70,<2.0.0)",
    "langchain-text-splitters (>=1.1.1,<2.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "langfuse (>=2.0.0,<3.0.0)",
    "botocore[crt] (>=1.42.71,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "flashrank (>=0.2.10,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
